java: move custom protocol